[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Environment/TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/ScoreArea.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Debug.gd" type="Script" id=11]

[node name="Main" type="Node2D"]
position = Vector2( 0, 1 )

[node name="Debug" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Game" type="Node2D" parent="."]
pause_mode = 2
position = Vector2( 0, 2 )
script = ExtResource( 7 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
collision_friction = 0.0
collision_bounce = 1.0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 65536, 0, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 3, 0, 65565, 3, 0, 65566, 3, 0, 65567, 3, 0, 65568, 3, 0, 65569, 3, 0, 65570, 3, 0, 65571, 3, 0, 65572, 3, 0, 65573, 3, 0, 65574, 3, 0, 65575, 3, 0, 65578, 0, 0, 131072, 0, 0, 131114, 0, 0, 196608, 0, 0, 196650, 0, 0, 262144, 0, 0, 262145, 3, 0, 262148, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 3, 0, 262167, 3, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 262174, 3, 0, 262175, 3, 0, 262176, 3, 0, 262177, 3, 0, 262178, 3, 0, 262179, 3, 0, 262180, 3, 0, 262181, 3, 0, 262182, 3, 0, 262183, 3, 0, 262186, 0, 0, 327680, 0, 0, 327681, 3, 0, 327684, 3, 0, 327722, 0, 0, 393216, 0, 0, 393217, 3, 0, 393220, 3, 0, 393258, 0, 0, 458752, 0, 0, 458753, 3, 0, 458756, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 3, 0, 458776, 3, 0, 458777, 3, 0, 458778, 3, 0, 458779, 3, 0, 458780, 3, 0, 458781, 3, 0, 458782, 3, 0, 458783, 3, 0, 458784, 3, 0, 458785, 3, 0, 458786, 3, 0, 458787, 3, 0, 458788, 3, 0, 458789, 3, 0, 458790, 3, 0, 458791, 3, 0, 458792, 3, 0, 458794, 0, 0, 524288, 0, 0, 524289, 3, 0, 524292, 3, 0, 524330, 0, 0, 589824, 0, 0, 589825, 3, 0, 589828, 3, 0, 589866, 0, 0, 655360, 0, 0, 655361, 3, 0, 655364, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 655383, 3, 0, 655384, 3, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 655390, 3, 0, 655391, 3, 0, 655392, 3, 0, 655393, 3, 0, 655394, 3, 0, 655395, 3, 0, 655396, 3, 0, 655397, 3, 0, 655398, 3, 0, 655399, 3, 0, 655402, 0, 0, 720896, 0, 0, 720897, 3, 0, 720900, 3, 0, 720938, 0, 0, 786432, 0, 0, 786433, 3, 0, 786436, 3, 0, 786474, 0, 0, 851968, 0, 0, 851969, 3, 0, 851972, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 3, 0, 851997, 3, 0, 851998, 3, 0, 851999, 3, 0, 852000, 3, 0, 852001, 3, 0, 852002, 3, 0, 852003, 3, 0, 852004, 3, 0, 852005, 3, 0, 852006, 3, 0, 852007, 3, 0, 852010, 0, 0, 917504, 0, 0, 917505, 3, 0, 917508, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917520, 3, 0, 917521, 3, 0, 917546, 0, 0, 983040, 0, 0, 983041, 3, 0, 983044, 3, 0, 983048, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983062, 3, 0, 983063, 3, 0, 983064, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 3, 0, 983068, 3, 0, 983069, 3, 0, 983076, 3, 0, 983077, 3, 0, 983078, 3, 0, 983079, 3, 0, 983082, 0, 0, 1048576, 0, 0, 1048577, 3, 0, 1048580, 3, 0, 1048583, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048590, 3, 0, 1048595, 3, 0, 1048596, 3, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1048603, 3, 0, 1048604, 3, 0, 1048605, 3, 0, 1048606, 3, 0, 1048607, 3, 0, 1048608, 3, 0, 1048609, 3, 0, 1048610, 3, 0, 1048611, 3, 0, 1048612, 3, 0, 1048613, 3, 0, 1048614, 3, 0, 1048618, 0, 0, 1114112, 0, 0, 1114113, 3, 0, 1114116, 3, 0, 1114118, 3, 0, 1114121, 3, 0, 1114122, 3, 0, 1114123, 3, 0, 1114124, 3, 0, 1114125, 3, 0, 1114127, 3, 0, 1114128, 3, 0, 1114129, 3, 0, 1114130, 3, 0, 1114131, 3, 0, 1114132, 3, 0, 1114137, 3, 0, 1114138, 3, 0, 1114139, 3, 0, 1114140, 3, 0, 1114141, 3, 0, 1114142, 3, 0, 1114144, 3, 0, 1114145, 3, 0, 1114151, 3, 0, 1114154, 0, 0, 1179648, 0, 0, 1179649, 3, 0, 1179652, 3, 0, 1179654, 3, 0, 1179656, 3, 0, 1179657, 3, 0, 1179658, 3, 0, 1179659, 3, 0, 1179660, 3, 0, 1179663, 3, 0, 1179664, 3, 0, 1179665, 3, 0, 1179669, 3, 0, 1179670, 3, 0, 1179671, 3, 0, 1179672, 3, 0, 1179673, 3, 0, 1179674, 3, 0, 1179675, 3, 0, 1179676, 3, 0, 1179678, 3, 0, 1179679, 3, 0, 1179690, 0, 0, 1245184, 0, 0, 1245194, 3, 0, 1245195, 3, 0, 1245196, 3, 0, 1245199, 3, 0, 1245202, 3, 0, 1245203, 3, 0, 1245204, 3, 0, 1245205, 3, 0, 1245206, 3, 0, 1245207, 3, 0, 1245208, 3, 0, 1245209, 3, 0, 1245210, 3, 0, 1245211, 3, 0, 1245213, 3, 0, 1245214, 3, 0, 1245215, 3, 0, 1245216, 3, 0, 1245217, 3, 0, 1245218, 3, 0, 1245219, 3, 0, 1245220, 3, 0, 1245221, 3, 0, 1245222, 3, 0, 1245223, 3, 0, 1245226, 0, 0, 1310720, 0, 0, 1310721, 3, 0, 1310722, 3, 0, 1310723, 3, 0, 1310724, 3, 0, 1310725, 3, 0, 1310726, 3, 0, 1310727, 3, 0, 1310728, 3, 0, 1310729, 3, 0, 1310730, 3, 0, 1310731, 3, 0, 1310732, 3, 0, 1310733, 3, 0, 1310734, 3, 0, 1310735, 3, 0, 1310736, 3, 0, 1310737, 3, 0, 1310738, 3, 0, 1310739, 3, 0, 1310741, 0, 0, 1310742, 3, 0, 1310743, 3, 0, 1310744, 3, 0, 1310745, 3, 0, 1310746, 3, 0, 1310747, 3, 0, 1310748, 3, 0, 1310749, 3, 0, 1310750, 3, 0, 1310752, 3, 0, 1310753, 3, 0, 1310754, 3, 0, 1310755, 3, 0, 1310756, 3, 0, 1310757, 3, 0, 1310758, 3, 0, 1310759, 3, 0, 1310762, 0, 0, 1376256, 0, 0, 1376277, 0, 0, 1376298, 0, 0, 1441792, 0, 0, 1441813, 0, 0, 1441834, 0, 0, 1507328, 0, 0, 1507349, 0, 0, 1507370, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Left Score Area" type="TileMap" parent="."]
position = Vector2( 0, -2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1507329, 2, 0, 1507330, 2, 0, 1507331, 2, 0, 1507332, 2, 0, 1507333, 2, 0, 1507334, 2, 0, 1507335, 2, 0, 1507336, 2, 0, 1507337, 2, 0, 1507338, 2, 0, 1507339, 2, 0, 1507340, 2, 0, 1507341, 2, 0, 1507342, 2, 0, 1507343, 2, 0, 1507344, 2, 0, 1507345, 2, 0, 1507346, 2, 0, 1507347, 2, 0, 1507348, 2, 0 )
script = ExtResource( 2 )

[node name="Right Score Area" type="TileMap" parent="."]
position = Vector2( 0, -2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1507350, 1, 0, 1507351, 1, 0, 1507352, 1, 0, 1507353, 1, 0, 1507354, 1, 0, 1507355, 1, 0, 1507356, 1, 0, 1507357, 1, 0, 1507358, 1, 0, 1507359, 1, 0, 1507360, 1, 0, 1507361, 1, 0, 1507362, 1, 0, 1507363, 1, 0, 1507364, 1, 0, 1507365, 1, 0, 1507366, 1, 0, 1507367, 1, 0, 1507368, 1, 0, 1507369, 1, 0 )
script = ExtResource( 2 )
side = 1
[connection signal="ready" from="." to="Game" method="_on_Main_ready"]
[connection signal="end" from="Game" to="Game" method="_on_Game_end"]
[connection signal="end" from="Game" to="Debug" method="_on_Game_end"]
[connection signal="pause" from="Game" to="Game" method="_on_Game_pause"]
[connection signal="pause" from="Game" to="Debug" method="_on_Game_pause"]
[connection signal="point_end" from="Game" to="Game" method="_on_Game_point_end"]
[connection signal="point_end" from="Game" to="Debug" method="_on_Game_point_end"]
[connection signal="point_reset" from="Game" to="Game" method="_on_Game_point_reset"]
[connection signal="point_reset" from="Game" to="Debug" method="_on_Game_point_reset"]
[connection signal="point_start" from="Game" to="Game" method="_on_Game_point_start"]
[connection signal="point_start" from="Game" to="Debug" method="_on_Game_point_start"]
[connection signal="restart" from="Game" to="Game" method="_on_Game_restart"]
[connection signal="restart" from="Game" to="Debug" method="_on_Game_restart"]
[connection signal="resume" from="Game" to="Game" method="_on_Game_resume"]
[connection signal="resume" from="Game" to="Debug" method="_on_Game_resume"]
[connection signal="start" from="Game" to="Game" method="_on_Game_start"]
[connection signal="start" from="Game" to="Debug" method="_on_Game_start"]
